force-app/main/default/objects/Reservation__c/fields/Check_inDate__c.field-meta.xml
<CustomField>
    <fullName>Check_inDate__c</fullName>
    <label>Check-inDate</label>
    <type>Date</type>
</CustomField>