force-app/main/default/objects/Reservation__c/fields/Check_outDate__c.field-meta.xml
<CustomField>
    <fullName>Check_outDate__c</fullName>
    <label>Check-outDate</label>
    <type>Date</type>
</CustomField>