force-app/main/default/objects/Reservation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-reservation</fullName>
                <default>true</default>
                <label>Pre-reservation</label>
            </value>
            <value>
                <fullName>Reservation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>