force-app/main/default/objects/Reservation__c/recordTypes/Pre_reservation.recordType-meta.xml
<RecordType>
    <fullName>Pre_reservation</fullName>
    <active>true</active>
    <label>Pre-reservation</label>
</RecordType>