force-app/main/default/objects/Reservation__c/recordTypes/Reservation.recordType-meta.xml
<RecordType>
    <fullName>Reservation</fullName>
    <active>true</active>
    <label>Reservation</label>
</RecordType>